fix: added different vc endpoints
