# blockchain/internal/api/web/openapi.yaml
@@ -157,21 +157,87 @@ paths:
             application/json:
               schema: { $ref: './jsonschema/responses/response.error.schema.json' }
 
-  /api/v1/vcs/create:
+  /api/v1/vcs/create/bms:
     post:
       tags: [ VC ]
-      summary: Create a VC Record
-      operationId: createVcRecord
+      summary: Create a VC Record for a BMS
+      operationId: createVcRecordBms
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: './jsonschema/requests/request.vc.create.schema.json'
+              $ref: './jsonschema/requests/request.vc.bmsProduced.create.schema.json'
             examples:
-              vcCreateRequest: # Give a unique name to this example
+              vcCreateRequestBms: # Give a unique name to this example
                 summary: Example DID Creation Request, that should succeed
                 externalValue: './jsonexample/requests/request.vc.create.1.json'
+      responses:
+        '200':
+          description: VC created successfully
+          content:
+            application/json:
+              schema:
+                { $ref: './jsonschema/responses/response.ok.schema.json' }
+        '400':
+          description: Client Errors
+          content:
+            application/json:
+              schema: { $ref: './jsonschema/responses/response.error.schema.json' }
+        '500':
+          description: Server Errors
+          content:
+            application/json:
+              schema: { $ref: './jsonschema/responses/response.error.schema.json' }
+
+  /api/v1/vcs/create/services:
+    post:
+      tags: [ VC ]
+      summary: Create a VC Record for a Services
+      operationId: createVcRecordServices
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './jsonschema/requests/request.vc.serviceAccess.create.schema.json'
+            examples:
+              vcCreateRequestServices: # Give a unique name to this example
+                summary: Example DID Creation Request, that should succeed
+                externalValue: './jsonexample/requests/request.vc.create.2.json'
+      responses:
+        '200':
+          description: VC created successfully
+          content:
+            application/json:
+              schema:
+                { $ref: './jsonschema/responses/response.ok.schema.json' }
+        '400':
+          description: Client Errors
+          content:
+            application/json:
+              schema: { $ref: './jsonschema/responses/response.error.schema.json' }
+        '500':
+          description: Server Errors
+          content:
+            application/json:
+              schema: { $ref: './jsonschema/responses/response.error.schema.json' }
+
+  /api/v1/vcs/create/cloud:
+    post:
+      tags: [ VC ]
+      summary: Create a VC Record for a Cloud
+      operationId: createVcRecordCloud
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './jsonschema/requests/request.vc.cloudInstance.create.schema.json'
+            examples:
+              vcCreateRequestCloud: # Give a unique name to this example
+                summary: Example DID Creation Request, that should succeed
+                externalValue: './jsonexample/requests/request.vc.create.3.json'
       responses:
         '200':
           description: VC created successfully
@@ -223,7 +289,7 @@ paths:
             application/json:
               schema: { $ref: './jsonschema/responses/response.error.schema.json' }
 
-  /api/v1/vps/verify:
+  /api/v1/vps/verify/bms:
     post:
       tags: [ VP ]
       summary: Verify a VP Record
